--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
       rel="stylesheet"
@@ -14,11 +14,10 @@
     <title>Выставка</title>
 
     <link href="CSS/normalize.css" rel="stylesheet" />
-
     <link href="CSS/splide.min.css" rel="stylesheet" />
 
-    <link href="CSS/style.css?v=2" rel="stylesheet" />
-    <link href="CSS/modal.css?v=2" rel="stylesheet" />
+    <link href="CSS/style.css?v=3" rel="stylesheet" />
+    <link href="CSS/modal.css?v=3" rel="stylesheet" />
   </head>
 
   <body>
