Change image urls

--- a/index.html
+++ b/index.html
@@ -43,48 +43,48 @@
 
       <div class="grid-container">
         <div class="grid-item" data-micromodal-trigger="modal-1">
-          <img class="grid-item-img" src="/IMG/Кутуков.png" />
+          <img class="grid-item-img" src="IMG/Кутуков.png" />
           <span class="grid-item-text">Кутуков Денис</span>
           <div class="grid-container-mini">
-            <img src="/IMG/Ps.svg" />
-            <img src="/IMG/Ai.svg" />
-            <img src="/IMG/Ae.svg" />
+            <img src="IMG/Ps.svg" />
+            <img src="IMG/Ai.svg" />
+            <img src="IMG/Ae.svg" />
           </div>
           <div class="text-mini">11 - 13 лет. 2021 - 2023 год.</div>
         </div>
         <div class="grid-item" data-micromodal-trigger="modal-2">
-          <img class="grid-item-img" src="/IMG/Масалимов.png" />
+          <img class="grid-item-img" src="IMG/Масалимов.png" />
           <span class="grid-item-text">Масалимов Рафаэль</span>
           <div class="grid-container-mini">
-            <img src="/IMG/Ps.svg" />
-            <img src="/IMG/Ai.svg" />
+            <img src="IMG/Ps.svg" />
+            <img src="IMG/Ai.svg" />
           </div>
           <div class="text-mini">13 - 14 лет. 2021 - 2023 год.</div>
         </div>
         <div class="grid-item" data-micromodal-trigger="modal-3">
-          <img class="grid-item-img" src="/IMG/Валиулина.png" />
+          <img class="grid-item-img" src="IMG/Валиулина.png" />
           <span class="grid-item-text">Валиуллина Айзиля</span>
           <div class="grid-container-mini">
-            <img src="/IMG/Ps.svg" />
-            <img src="/IMG/Ai.svg" />
+            <img src="IMG/Ps.svg" />
+            <img src="IMG/Ai.svg" />
           </div>
           <div class="text-mini">14 - 15 лет. 2021 - 2023 год.</div>
         </div>
         <div class="grid-item" data-micromodal-trigger="modal-4">
-          <img class="grid-item-img" src="/IMG/Зайникеева.png" />
+          <img class="grid-item-img" src="IMG/Зайникеева.png" />
           <span class="grid-item-text">Зайникеева Ника</span>
           <div class="grid-container-mini">
-            <img src="/IMG/Ps.svg" />
-            <img src="/IMG/Ai.svg" />
+            <img src="IMG/Ps.svg" />
+            <img src="IMG/Ai.svg" />
           </div>
           <div class="text-mini">12 лет. 2022 - 2023 год.</div>
         </div>
         <div class="grid-item" data-micromodal-trigger="modal-5">
-          <img class="grid-item-img" src="/IMG/Масленцова.png" />
+          <img class="grid-item-img" src="IMG/Масленцова.png" />
           <span class="grid-item-text">Масленцова Ксения</span>
           <div class="grid-container-mini">
-            <img src="/IMG/Ps.svg" />
-            <img src="/IMG/Ai.svg" />
+            <img src="IMG/Ps.svg" />
+            <img src="IMG/Ai.svg" />
           </div>
           <div class="text-mini">12 лет. 2022 - 2023 год.</div>
         </div>
